--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,3 +15,11 @@
 @import url('components/loading.css');
 
 /* Any additional custom styles can be added here */
+
+/* Modal z-index fix */
+.modal {
+  z-index: 1055 !important;
+}
+.modal-backdrop {
+  z-index: 1040 !important;
+}
