--- a/templates/base.html
+++ b/templates/base.html
@@ -129,6 +129,9 @@
     <!-- Base utilities (must load first) -->
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
     
+    <!-- Modal backdrop fix -->
+    <script src="{{ url_for('static', filename='js/fix-modal.js') }}"></script>
+    
     <!-- New Settings System -->
     <script src="{{ url_for('static', filename='js/settings-config.js') }}"></script>
     <script src="{{ url_for('static', filename='js/settings-manager.js') }}"></script>
