--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             <div class="navbar-brand-section">
                 <i class="fas fa-newspaper navbar-brand-icon"></i>
                 <div class="navbar-brand-text">
-                    <a href="{{ url_for('main.home') }}" class="navbar-brand-title">Haber Editörü</a>
+                    <a href="{{ url_for('pages.home') }}" class="navbar-brand-title">Haber Editörü</a>
                     <span class="navbar-brand-version">version 1.0</span>
                 </div>
             </div>
@@ -37,13 +37,13 @@
             <!-- Center Section - Navigation -->
             <div class="navbar-nav-section">
                 <div class="navbar-nav-item">
-                    <a href="{{ url_for('main.home') }}" class="navbar-nav-link active">
+                    <a href="{{ url_for('pages.home') }}" class="navbar-nav-link active">
                         <i class="fas fa-home"></i>
                         Anasayfa
                     </a>
                 </div>
                 <div class="navbar-nav-item">
-                    <a href="{{ url_for('main.history') }}" class="navbar-nav-link">
+                    <a href="{{ url_for('pages.history') }}" class="navbar-nav-link">
                         <i class="fas fa-history"></i>
                         Geçmiş
                     </a>
